# puglies

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  POLYMARKET.md  TODO.md  dev.sh  go-tui.md  package.json  pnpm-lock.yaml  tauri-gui.md  vitest.config.ts
.github/workflows/: ci.yml
crates/polymarket-rs/: Cargo.toml
crates/polymarket-rs/src/: error.rs  lib.rs  types.rs
crates/polymarket-rs/src/api/: clob.rs  gamma.rs  mod.rs  order.rs  tests.rs
crates/polymarket-rs/src/auth/: credentials.rs  eip712.rs  hmac.rs  mod.rs  order_eip712.rs  tests.rs
crates/polymarket-rs/src/ws/: clob.rs  events.rs  manager.rs  mod.rs  rtds.rs  tests.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  error.rs  events.rs  lib.rs  main.rs  types.rs
src-tauri/src/api/: clob.rs  gamma.rs  mod.rs  order.rs
src-tauri/src/auth/: credentials.rs  eip712.rs  hmac.rs  keyring.rs  mod.rs  order_eip712.rs
src-tauri/src/commands/: auth.rs  markets.rs  mod.rs  trading.rs  websocket.rs
src-tauri/src/websocket/: clob.rs  manager.rs  mod.rs  rtds.rs
src/components/auth/: LoginModal.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx  StatusBar.tsx  index.ts
src/components/markets/: MarketCard.tsx  MarketList.tsx  MarketSearch.tsx  index.ts
src/components/providers/: WebSocketProvider.tsx
src/components/trading/: OrderBook.tsx  PriceChart.tsx  TradeForm.tsx  index.ts
src/components/ui/: badge.tsx  button.tsx  card.tsx
src/hooks/: index.ts  useBackendEvent.ts  useTauriEvents.ts
src/hooks/__tests__/: useBackendEvent.test.tsx
src/lib/: tauri.ts  types.ts  utils.ts
src/lib/backend/: events.ts  index.ts  tauri-adapter.ts  types.ts  web-adapter.ts
src/lib/backend/__tests__/: index.test.ts
src/pages/: Dashboard.tsx  MarketDetail.tsx  Markets.tsx  Portfolio.tsx  Settings.tsx  index.ts
src/stores/: auth.ts  markets.ts  orderbook.ts  trading.ts  websocket.ts
src/stores/__tests__/: auth.test.ts  trading.test.ts  websocket.test.ts
src/test/: mock-adapter.ts  setup.ts
