# AIDEV-NOTE: Tauri app - uses polymarket-rs for API logic
[package]
name = "plgui"
version = "0.1.0"
description = "Polymarket Desktop Trading Client"
authors = ["rileytg"]
edition = "2021"

[lib]
name = "plgui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core API library
polymarket-rs = { path = "../crates/polymarket-rs" }

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# From workspace
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
rand.workspace = true

# Logging (app-specific)
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Secure credential storage (app-specific)
keyring = "3"

# SQLite for local data persistence (app-specific)
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5"
