# AIDEV-NOTE: Core Polymarket API crate - zero Tauri dependencies
[package]
name = "polymarket-rs"
version = "0.1.0"
edition = "2021"
description = "Polymarket API client library"

[dependencies]
# From workspace
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

# Crypto
alloy-primitives.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
rand.workspace = true

# WebSocket
tokio-tungstenite.workspace = true
futures-util.workspace = true

# Utils
urlencoding.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
# Enable integration tests that hit real APIs
integration = []
